--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+
+@font-face {
+  font-family: 'gotham-light';
+  src: local('gotham-light'), url('./assets/fonts/Gotham-Light.otf');
+}
+
+@font-face {
+  font-family: 'gotham-medium';
+  src: local('gotham-medium'), url('./assets//fonts/Gotham-Medium.otf');
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
