--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -29,12 +29,12 @@ a:link, a:visited {
     color: #000;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Roboto Condensed', sans-serif;
-    font-weight: 700;
+h1, h2, h3, h4, h5, h6, button, a {
     text-transform: uppercase;
+    font-family: gotham-medium;
 }
 
-li, a, p, label, input, textarea {
-    font-family: 'Roboto', sans-serif;
+li, p, label, input, textarea {
+    font-family: gotham-light;
+    font-weight: 700;
 }
