--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -4,70 +4,78 @@
     height: 100%;
     padding: 2rem;
     padding-bottom: 4rem;
-    background: #0E538F;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
+    background: #F9F9F9;
 
-    &__right {
+    &__inner {
         display: flex;
         flex-direction: row;
+        width: 95%;
+        justify-content: space-between;
         align-items: center;
-    }
+        align-items: center;
 
-    h1 {
-        color: #fff;
-        text-transform: uppercase;
-    }
+        .footer-left {
 
-    .media-box {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .icons {
-        display: flex;
-        justify-content: space-between;
-        width: 5.5rem;
-
-        &__image {
-            width: 2rem;
-
-            img {
-                width: 100%;
+            .footer__logo {
+                width: 13rem;
+                margin: 0 1rem;
+                margin-bottom: 2rem;
+        
+                img {
+                    width: 100%;
+                }
             }
-        }
-    }
-
-    &__logo {
-        width: 10rem;
-        margin: 0 1rem;
-
-        img {
-            width: 100%;
-        }
-    }
     
-    &__social {
-        display: flex;
-        justify-content: space-between;
-
-        ul {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            width: 25rem;
-            margin-right: 2rem;
-
-            li {
-                margin: .2rem;
-            }
-            
-            a:link, a:visited {
-                color: #fff;
+            h1 {
+                color: #0E538F;
+                text-transform: uppercase;
+                margin-left: 1rem;
+                letter-spacing: 6px;
                 font-size: 1.3rem;
+            }
+        }
+
+        .footer__social {
+            margin-top: 1rem;
+    
+            ul {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                letter-spacing: 7px;
+                font-size: 1.3rem;
+                font-weight: 700;
+
+                li {
+                    margin-bottom: 2rem;
+                }
+                
+                a:link, a:visited {
+                    color: #0E538F;
+                    font-size: 1.3rem;
+                }
+            }
+        }
+
+        .media-box {
+            display: flex;
+            flex-direction: column;
+            .icons {
+                display: flex;
+                justify-content: space-between;
+                width: 10rem;
+        
+                &__image {
+                    width: 4rem;
+                    height: 4rem;
+                    border-radius: 50%;
+                    background: #0E538F;
+                    padding: .8rem;
+        
+                    img {
+                        width: 100%;
+                    }
+                }
             }
         }
     }
@@ -75,32 +83,35 @@
 
 @media (max-width: 860px) {
     .footer {
-        flex-direction: column;
-        padding-bottom: 4rem;
-
-        &__right {
-            flex-direction: column;
-        }
-
-        h1 {
-            font-size: 1.4rem;
-            margin-bottom: 1rem;
-        }
-
-        .media-box {
-            justify-content: center;
-            align-items: center;
-        }
-
-        &__social {
+        padding-bottom: 10rem;
     
-            ul {
-                width: 100%;
-                margin-bottom: 1.5rem;
-                margin-right: 0;
-
-                a:link, a:visited {
-                    font-size: 1.1rem;
+        &__inner {
+            flex-direction: column;
+            width: 100%;
+    
+            .footer-left {
+    
+                .footer__logo {
+                    margin: 0 auto;
+                    margin-bottom: 1rem;
+                }
+        
+                h1 {
+                    margin-bottom: 1rem;
+                }
+            }
+    
+            .footer__social {
+        
+                ul {
+                    justify-content: center;
+                    align-items: center;
+                }
+            }
+    
+            .media-box {
+                .icons {
+                    width: 10rem;
                 }
             }
         }
