--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -1,11 +1,18 @@
 .contact {
     width: 100%;
     height: 100vh;
-    margin-top: 8rem;
+    margin-top: 10rem;
 
     h1 {
-        color: #000;
+        color: #153F6D;
+        font-size: 32px;
         text-align: center;
+        text-align: center;
+        letter-spacing: 7px;
+        width: 60%;
+        max-width: 800px;
+        margin: 0 auto;
+        margin-bottom: .5rem;
     }
 }
 
