--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -82,7 +82,7 @@
             padding: 2rem;
             display: flex;
             flex-direction: column;
-            background: #0E538F;
+            background: #153F6D;
 
             h1 {
                 text-transform: uppercase;
@@ -130,7 +130,7 @@
 
                 &:hover {
                     background: #fff;
-                    color: #0E538F;
+                    color: #153F6D;
                 }
             }
         }
