--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -27,7 +27,7 @@
             }
     
             h1 {
-                color: #0E538F;
+                color: #153F6D;
                 text-transform: uppercase;
                 margin-left: 1rem;
                 letter-spacing: 6px;
@@ -51,7 +51,7 @@
                 }
                 
                 a:link, a:visited {
-                    color: #0E538F;
+                    color: #153F6D;
                     font-size: 1.3rem;
                 }
             }
@@ -69,7 +69,7 @@
                     width: 4rem;
                     height: 4rem;
                     border-radius: 50%;
-                    background: #0E538F;
+                    background: #153F6D;
                     padding: .8rem;
         
                     img {
