--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -92,7 +92,7 @@
                 border-radius: 5px;
 
                 a:link, a:visited {
-                    color: #000;
+                    color: #153F6D;
                 }
             }
         }
