--- a/src/sass/_programs.scss
+++ b/src/sass/_programs.scss
@@ -1,5 +1,5 @@
 .program {
-    margin-top: 6rem;
+    margin-top: 9rem;
     padding: 2rem;
     height: 100%;
     width: 100%;
@@ -28,32 +28,36 @@
     &__info {
         h1, h3, li, p {
             margin-bottom: 1rem;
-        }
-
-        p {
-            font-size: 1.3rem;
+            color: #153F6D;
         }
 
         ul {
             margin-left: 2rem;
+            color: #153F6D;
 
             li {
                 list-style-type: disc;
-                font-size: 1.3rem;
+                font-size: 1.6rem;
             }
         }
 
         button {
-            margin-top: 1rem;
-            padding: .5rem;
-            font-size: 1.1rem;
-            width: 15rem;
+            margin-top: 1rem;          
+            font-size: 1.3rem;
+            width: 18rem;
+            height: 4rem;
             text-transform: uppercase;
-            font-weight: 700;
-            border: 2px solid #000;
-            border-radius: 5px;
+            border: 2.5px solid #153F6D;
             background: transparent;
             cursor: pointer;
+
+            a {
+                display: block;
+                width: 100%;
+                padding: .5rem;
+                color: #153F6D;
+                letter-spacing: 7px;
+            }
         }
     }
 }
