--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -17,7 +17,7 @@
             border-radius: 5px;
             padding: 1rem;
             position: absolute;
-            top: 50%;
+            top: 55%;
             left: 50%;
             transform: translate(-50%, -50%);
             display: flex;
@@ -28,14 +28,14 @@
             h1 {
                 font-size: 3.9rem;
                 color: #fff;
-                margin-bottom: .5rem;
+                margin-bottom: 2rem;
                 text-align: center;
                 letter-spacing: 7px;
             }
 
             p {
                 text-align: center;
-                font-size: 2rem;
+                font-size: 2.5rem;
                 color: #fff;
             }
 
@@ -132,6 +132,10 @@
                     background: #fff;
                     color: #153F6D;
                 }
+            }
+
+            .kb-btn {
+                width: 18rem;
             }
         }
     }
