adds design to testimonial page

--- a/src/sass/_testimonials-page.scss
+++ b/src/sass/_testimonials-page.scss
@@ -1,11 +1,13 @@
 .testimonials-page {
-    margin-top: 8rem;
+    margin-top: 10rem;
     margin-bottom: 5rem;
     width: 100%;
 
     h1 {
         text-align: center;
         margin-bottom: 2rem;
+        color: #153F6D;
+        letter-spacing: 7px;
     }
 
     .page {
@@ -14,6 +16,8 @@
 
         p, h3 {
             font-size: 1.3rem;
+            color: #153F6D;
+            line-height: 1.6;
         }
 
         h3 {
