--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -72,6 +72,10 @@
             font-size: 1.4rem;
             padding: 2rem;
             letter-spacing: 7px;
+
+            a:link, a:visited {
+                color: #fff;
+            }
         }
     }
 
