--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -127,19 +127,10 @@
     }
 }
 
-@media (max-width: 1300px) {
-
-    .about {
-        &__intro, &__background  {
-            width: 100%;
-        }
-    }
-}
-
 @media (max-width: 800px) {
     
     .about {
-        margin-top: 6.5rem;
+        margin-top: 9.5rem;
     
         &__intro {
             flex-direction: column;
@@ -149,6 +140,7 @@
             .about__intro-image {
                 order: 1;
                 width: 100%;
+                margin-bottom: 1rem;
             }
 
             .about__intro-text {
