--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -17,5 +17,10 @@
 }
 
 @media (max-width: 700px) {
-
+    .contact {
+        h1 {
+            width: 100%;
+            max-width: 100%;
+        }
+    }
 }
