--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -110,7 +110,7 @@
             left: 0;
             width: 26px;
             height: 3px;
-            background: #000;
+            background: #153F6D;
 
             &:nth-child(1) {
                 top: 0;
@@ -132,7 +132,7 @@
         right: -100%;
         height: 100vh;
         width: 100vw;
-        background: #0E538F;
+        background: #153F6D;
         display: flex;
         flex-direction: column;
         transition: right 300ms ease-in-out;
@@ -188,6 +188,8 @@
                     color: #fff;
                     display: block;
                     padding: 15px;
+                    font-size: 1.5rem;
+                    letter-spacing: 7px;
                 }
 
                 .chevron {
@@ -253,7 +255,7 @@
         }
 
         &__logo {
-            width: 8rem;
+            width: 12rem;
         }
 
         &__list {
