--- a/src/sass/_program-calculator.scss
+++ b/src/sass/_program-calculator.scss
@@ -39,7 +39,7 @@
                 top: 1rem;
                 height: 2px;
                 width: 30px;
-                background: #000;
+                background: #153F6D;
 
                 &:nth-child(1) {
                     transform: rotate(45deg);
@@ -67,12 +67,14 @@
             content: '\003E\003E';
             position: absolute;
             padding-left: .4rem;
+            color: #153F6D;
         }
     }
 
     h1, h3 {
         margin-bottom: .5rem;
         text-align: left;
+        color: #153F6D;
     }
 
     &__btns {
@@ -96,6 +98,7 @@
 
         h2 {
             margin-top: 1rem;
+            color: #153F6D;
         }
 
         p {
@@ -103,15 +106,15 @@
         }
 
         .days button {
-            width: 2rem;
+            width: 2.5rem;
             margin-left: .1rem;
 
             &.reset {
-                width: 5rem;
+                width: 7rem;
             }
             
             &.active {
-                background: #0E538F;
+                background: #153F6D;
                 color: #fff;
             }
 
@@ -131,6 +134,8 @@
             font-size: 1.1rem;
             background: transparent;
             cursor: pointer;
+            color: #153F6D;
+            letter-spacing: 2px;
 
             &:nth-child(1) {
                 margin-top: .3rem;
@@ -140,6 +145,7 @@
                 content: '+';
                 position: absolute;
                 right: .6rem;
+                color: #153F6D;
             }
 
             &.active {
@@ -151,6 +157,7 @@
                 content: '-';
                 position: absolute;
                 right: .6rem;
+                color: #fff;
             }
         }
     }
