--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -1,5 +1,5 @@
 .home {
-    margin-top: 5rem;
+    margin-top: 9rem;
     margin-bottom: 8rem;
 
     .home__card {
@@ -163,6 +163,15 @@
 
 @media (max-width: 900px) {
     .home {
+
+        .home__card {
+    
+            .home__card-cta {
+                h1 {
+                    font-size: 3rem;
+                }
+            }
+        }
         &__programs {
 
             .home__programs-image {
