--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -75,7 +75,7 @@
         background: #0E538F;
         border-top: .5px solid #E0E0E0;
         border-radius: 5px;
-        transition: all 300ms ease-in-out;
+        transition: top .3s ease-in-out, opacity .3s ease-in-out;
 
         .nav__dropdown-link {
             margin: .5rem;
