--- a/src/sass/_contact-form.scss
+++ b/src/sass/_contact-form.scss
@@ -41,14 +41,35 @@
    }
 
    .btn {
-       background: transparent;
-       color: #153F6D;;
+       background: #153F6D;
+       color: #fff;
        text-transform: uppercase;
-       border: 2px solid #153F6D;;
+       border: 2px solid #153F6D;
        cursor: pointer;
        font-size: 1.6rem;
        -webkit-appearance: none;
    }
+}
+
+@media (max-width: 1400px) {
+    .contact-form {
+     
+        p {
+            font-size: 1.1rem;
+        }
+        
+        label {
+            font-size: 1.1rem;
+        }
+
+        input, textarea, select {
+            font-size: 1.1rem;
+        }
+     
+        .btn {
+            font-size: 1.1rem;
+        }
+     }
 }
 
 @media (max-width: 800px) {
