--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -16,6 +16,15 @@
     }
 }
 
+@media (max-width: 1400px) {
+
+    .contact {
+        h1 {
+            font-size: 20px;
+        }
+    }
+}
+
 @media (max-width: 700px) {
     .contact {
         h1 {
