--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -81,6 +81,47 @@
     }
 }
 
+@media (max-width: 1400px) {
+    .footer {
+    
+        &__inner {
+    
+            .footer-left {
+    
+                .footer__logo {
+                    width: 11rem;
+                }
+        
+                h1 {
+                    font-size: 1.1rem;
+                }
+            }
+    
+            .footer__social {
+        
+                ul {
+                    font-size: 1.1rem;   
+                    
+                    a:link, a:visited {
+                        font-size: 1.1rem;
+                    }
+                }
+            }
+    
+            .media-box {
+                .icons {
+                    width: 8rem;
+            
+                    &__image {
+                        width: 3rem;
+                        height: 3rem;
+                    }
+                }
+            }
+        }
+    }
+}
+
 @media (max-width: 860px) {
     .footer {
         padding-bottom: 10rem;
