--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -34,7 +34,7 @@
 
             p {
                 text-align: center;
-                font-size: 2.5rem;
+                font-size: 2.3rem;
                 color: #fff;
             }
 
@@ -135,26 +135,45 @@
     }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1400px) {
     .home {
-        &__programs {
-            flex-direction: column;
-            margin: 4rem 1rem;
-
-            .home__programs-image {
+        margin-top: 7rem;
+        .home__card {
     
-                img {
-                    width: 100%;
-                    min-width: 100%;
-                    height: 100%;
+            .home__card-cta {
+    
+                h1 {
+                    font-size: 3rem;
                 }
-            }
-
-            .home__programs-content {
-                width: 100%;
 
                 p {
+                    font-size: 1.7rem;
+                }
+    
+                button {
+                    font-size: 1rem;
+                }
+            }
+        }
+    
+        &__programs {
+    
+            .home__programs-content {
+    
+                h1 {
+                    font-size: 18px;
+                }
+    
+                ul {
                     font-size: 1.2rem;
+                }
+    
+                button {      
+                    font-size: 1rem;
+                }
+    
+                .kb-btn {
+                    width: 18rem;
                 }
             }
         }
