makes mobile tweaks

--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -141,6 +141,7 @@
         .home__card {
     
             .home__card-cta {
+                top: 70%;
     
                 h1 {
                     font-size: 3rem;
