--- a/src/sass/_program-calculator.scss
+++ b/src/sass/_program-calculator.scss
@@ -103,7 +103,9 @@
         }
 
         p {
-            margin: 0;
+            text-align: left;
+            width: 18rem;
+            margin: 0 auto;
         }
 
         .days button {
