--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -28,7 +28,7 @@
 @media (max-width: 700px) {
     .contact {
         h1 {
-            width: 100%;
+            width: calc(100% - 2rem);
             max-width: 100%;
         }
     }
