--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 9rem;
+    height: 8.5rem;
     background: #fff;
     font-weight: 500;
     z-index: 999;
@@ -62,20 +62,22 @@
                 left: 0rem;
                 opacity: 1;
                 top: 4.7rem;
+                width: 315px;
+                visibility: visible;
             }
         }
     }
 
     .nav__dropdown {
         position: absolute;
-        top: -4.7rem;
         left: 0rem;
         opacity: 0;
-        width: 315px;
+        width: 0;
         background: #0E538F;
         border-top: .5px solid #E0E0E0;
         border-radius: 5px;
-        transition: top .3s ease-in-out, opacity .3s ease-in-out;
+        visibility: hidden;
+        transition: top .3s ease-in-out, opacity .4s ease-in;
 
         .nav__dropdown-link {
             margin: .5rem;
@@ -248,7 +250,7 @@
     }
 }
 
-@media (max-width: 1400px) {
+@media (max-width: 1500px) {
     .nav {
         height: 7rem;
     
