--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -269,6 +269,10 @@
     
             .nav__list-item {
                 font-size: 1rem;
+
+                &:hover .nav__dropdown {
+                    top: 4.4rem;
+                }
             }
         }
     
